# fugio-core-plugins

./: .gitmodules  CMakeLists.txt  README.md  config.h.in  fugio-manifest.json  fugio-manifest.json.in
.github/workflows/: cmake-multi-platform.yml
api/: CMakeLists.txt
fugio-audio/: CMakeLists.txt
fugio-audio/source/: audiofilternode.cpp  audiofilternode.h  audiomixernode.h  audiopin.h  audiotoarraynode.h  centroidnode.h  fftpin.h  frequencybandsnode.h  magnitudenode.h  mononode.h  ringmodulatornode.h  signalnode.h  vcfnode.h
fugio-audio/translations/: translations_de.ts
fugio-colour/: CMakeLists.txt
fugio-colour/source/: colourbuttonnode.h  colourplugin.h  joincolourhslanode.h  joincolourrgbanode.h  splitcolourhslanode.h  splitcolourrgbanode.h
fugio-colour/translations/: translations_de.ts
fugio-core/: CMakeLists.txt
fugio-core/include/fugio/core/: float_interface.h
fugio-core/source/: anytriggernode.h  autorangenode.cpp  autorangenode.h  bitarraypin.h  bitstoboolnode.h  blockupdatesnode.h  booltobitsnode.h  bytearraypin.h  choicepin.cpp  choicepin.h  coreplugin.h  decimatenode.h  envelopenode.cpp  envelopenode.h  floatpin.cpp  floatpin.h  framedelaynode.cpp  integertofloatnode.h  joinpointnode.h  joinrectnode.h  linepin.h  polygonpin.h  processclicknode.h  splitrectnode.h  transformpin.h  updatenode.h
fugio-core/tests/: CMakeLists.txt
fugio-core/translations/: translations_de.ts
fugio-file/: CMakeLists.txt
fugio-file/source/: filenamenode.h  filewatchernode.h  loadnode.h
fugio-file/translations/: translations.qrc  translations_de.ts
fugio-geometry/: CMakeLists.txt
fugio-gui/: CMakeLists.txt
fugio-gui/include/fugio/gui/: input_events_interface.h
fugio-gui/source/: buttonnode.cpp  buttonnode.h  choicenode.h  dialnode.h  floatnode.h  inputeventspin.cpp  inputeventspin.h  integernode.h  keyboardnode.cpp  keyboardnode.h  keyboardpin.cpp  labelnode.h  lcdnumbernode.h  lednode.h  mainwindownode.cpp  mainwindownode.h  mousenode.cpp  mousenode.h  numbermonitornode.h  screennode.h  slidernode.h  stringnode.cpp  stringnode.h
fugio-gui/translations/: translations_de.ts
fugio-image/: CMakeLists.txt
fugio-image/source/: colourmasknode.h  copynode.h  grabscreennode.cpp  grabscreennode.h  imagefilternode.h  imageloadernode.cpp  imageloadernode.h  imagenode.h  imagepreview.h  imagepreviewnode.cpp  imagepreviewnode.h  imagesavenode.h  imagesizenode.h  imagesplitnode.h  painterwindownode.h  replacealphanode.h  scaleimagenode.cpp  scaleimagenode.h  setalphanode.h
fugio-image/translations/: translations_de.ts
fugio-json/: CMakeLists.txt
fugio-json/source/: jsonquerynode.cpp
fugio-math/: CMakeLists.txt
fugio-math/examples/math/logic/: AND.fug  NAND.fug  NOR.fug  NOT.fug  OR.fug  XNOR.fug  XOR.fug
fugio-math/source/: absnode.h  addnode.h  andbitsnode.h  andnode.h  arccosnode.h  bitstointnode.h  bitstopinsnode.h  booleanlatchnode.h  ceilnode.h  comparenumbersnode.h  cosinedegreesnode.h  crossproducenode.h  dividenode.h  dotproductnode.h  flipflopnode.h  floornode.h  inttobitsnode.h  joinvector3.h  joinvector4node.h  mathexpressionnode.h  mathplugin.h  matrix4node.h  matrixinversenode.h  matrixlookatnode.h  matrixorthographicnode.h  matrixperspectivenode.h  matrixrotatenode.h  matrixscalenode.h  matrixtranslatenode.h  maxnode.h  minmaxnode.h  minnode.h  modulusnode.h  multiplexornode.h  multiplynode.h  nandbitsnode.h  nandnode.h  normalisenode.h  nornode.h  notbitsnode.h  (+22 more)
fugio-math/translations/: translations_de.ts
fugio-midi/: CMakeLists.txt
fugio-midi/source/: channeloutputnode.cpp  midifileloadnode.h  midinotenode.cpp  midioutputhelpernode.h  midioutputpin.cpp  midioutputpin.h  midiplugin.cpp
fugio-network/: CMakeLists.txt
fugio-network/source/: cobsdecodenode.h  cobsencodenode.h  getnode.cpp  getnode.h  packetdecodenode.h  packetencodenode.h  slipdecodenode.h  slipencodenode.h  tcpreceivenode.h  tcpreceiverawnode.h  tcpsendnode.h  tcpsendrawnode.h  udpreceiverawnode.h  udpsendrawnode.h  universereceivenode.cpp  universereceivenode.h  universesendnode.h  websocketclientnode.cpp  websocketclientnode.h  websocketdataservernode.cpp  websocketdataservernode.h  websocketservernode.cpp  websocketservernode.h
fugio-network/translations/: translations_de.ts
fugio-painter/: CMakeLists.txt
fugio-serial/: CMakeLists.txt
fugio-serial/source/: deviceserial.cpp  deviceserial.h  deviceserialconfiguration.cpp  serialdecodernode.h  serialencodernode.h  serialinputnode.cpp  serialinputnode.h  serialoutputnode.h  serialplugin.cpp  serialplugin.h
fugio-serial/translations/: translations_de.ts
fugio-text/: CMakeLists.txt
fugio-text/source/: chopnode.h  codeeditor.cpp  comparestringnode.h  containsnode.h  leftnode.h  linebuffernode.cpp  linebuffernode.h  midnode.h  numbertostringnode.h  regexpnode.cpp  regexpnode.h  rightnode.h  stringjoinnode.h  stringsplitnode.h  stringtofloatnode.h  stringtointegernode.h  syntaxerrorpin.cpp  syntaxerrorpin.h  texteditorform.ui  texteditornode.cpp  texteditornode.h  texteditorremotenode.h
fugio-text/translations/: translations_de.ts
fugio-time/: CMakeLists.txt
fugio-time/examples/time/: Beat Tap.fug
fugio-time/source/: beattapnode.h  clocknode.h  cronnode.h  datenode.h  datepin.h  datetimepin.h  datetimetostringnode.h  delaynode.h  everynode.h  inertianode.h  localtimenode.cpp  localtimenode.h  playheadcontrolnode.h  playheadframesnode.cpp  playheadframesnode.h  playheadnode.h  splitdatetimenode.h  timenode.h  timepin.h  universetimenode.h  utctimenode.cpp  utctimenode.h
fugio-time/translations/: translations_de.ts
